[package]
name = "druid-enums-bug"
version = "0.1.0"
authors = ["Justin Moon <mail@justinmoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-enums = { git = "https://github.com/Finnerale/druid-enums.git" }
# druid = { git = "https://github.com/justinmoon/druid", branch = "view-switcher" }
druid = "0.6"
log = "0.4.11"
